--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,21 @@
 {
-    "routes": [
+    "headers": [
       {
-        "src": "/api/getPageviews",
-        "dest": "./api/getPageviews.js"
+        "source": "/api/(.*)",
+        "headers": [
+          {
+            "key": "Access-Control-Allow-Origin",
+            "value": "*"
+          },
+          {
+            "key": "Access-Control-Allow-Headers",
+            "value": "X-Requested-With, Content-Type, Authorization"
+          },
+          {
+            "key": "Access-Control-Allow-Credentials",
+            "value": "true"
+          }
+        ]
       }
     ]
   }
