--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "ihavenoideaa(xzgl)",
   "license": "ISC",
   "dependencies": {
     "umami-api": "^0.7.2"
